# machine-learning

./: README.md  classification_model.ipynb  data_pre_processing.ipynb  evaluation_metric.ipynb  lda.ipynb  penguins_data_ml.ipynb  pyproject.toml  titanic_data_ml.ipynb
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
practice/: car_price_regression.ipynb  penguins_data_ml.ipynb  titanic_data_ml.ipynb
practice/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
practice/catboost_info/learn/: events.out.tfevents
theory/: 0. data_preprocessing.ipynb  1. classification_model.ipynb  2. regression_model.ipynb  3. clustering_model.ipynb  4. evaluation_metric.ipynb  5. recommend_system.ipynb  6. auto_ml.ipynb  7. save_model.ipynb  classification_model.ipynb  data_pre_processing.ipynb  evaluation_metric.ipynb  lda.ipynb  model.pkl  regression_model.ipynb
