[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autoviz>=0.1.905",
    "jupyter>=1.1.1",
    "konlpy>=0.6.0",
    "koreanize-matplotlib>=0.1.1",
    "lazypredict>=0.2.16",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy<2",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scikit-surprise>=1.1.4",
    "seaborn>=0.13.2",
    "xgboost>=1.6.2",
]
